Fix internal link target heading hidden behind fixed header

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,17 @@
   color: rgb(52, 58, 64);
 }
 
+:target:before {
+  content: "";
+  display: block;
+  height: 50px;
+  margin: -30px 0 0;
+}
+
+:target {
+  border-bottom: 1px solid #a5e1a6;
+}
+
 a {
   text-decoration: none;
 }
